[BE-0040] Change public endpoint setting